--- a/exercicios.html
+++ b/exercicios.html
@@ -2,12 +2,59 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=[device-width], initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios</title>
+    <link rel="stylesheet" href="style_exercicios.css">
 </head>
 <body>
 
-    <h1>EXERCICIOS</h1>
+
+    <div id="content"> 
+        <div class="col-itens"> 
+            <div class="row-itens barra" > 
+                <h1 id="title"> EXERCÍCIOS DE CRUZAMENTOS GENÉTICOS </h1>
+                <div id="barra-progresso">  
+                    <div id="value">
+                    </div>
+                </div>
+            </div>
+            <div id="container">
+                <h2 id="pergunta"> 1- Suponha o seguinte cenário, dois animais homozigotos tem 2 filhos, qual a probabilidade dos dois filhos serem homozigotos? </h2>
+                <div class="row-itens blocoAlt" id="blocoAlt"> 
+                    <div class="row-itens"> 
+                        <div id="alternativa_a" class="bolinha_alternativa"> a) </div>
+                        <div> 
+                            <h3 id="resposta_a" class="alternativas"> 100% </h3>
+                        </div>
+                    </div>
+                    <div class="row-itens"> 
+                        <div id="alternativa_c" class="bolinha_alternativa"> c) </div>
+                        <div> 
+                            <h3 id="resposta_c" class="alternativas"> 25%</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-itens blocoAlt" id="blocoAlt"> 
+                    <div class="row-itens"> 
+                        <div id="alternativa_b" class="bolinha_alternativa"> b) </div>
+                        <div> 
+                            <h3 id="resposta_b" class="alternativas"> 50%</h3>
+                        </div>
+                    </div>
+                    <div class="row-itens"> 
+                        <div id="alternativa_d" class="bolinha_alternativa"> d) </div>
+                        <div> 
+                            <h3 id="resposta_d" class="alternativas"> 0%</h3>
+                        </div>
+                    </div>
+                </div>
+                <button id="btnProxQuestao"> Responder</button>
+            </div>
+        </div>
+    </div>
+
     
 </body>
+<script src="script_exercicios.js"> </script>
 </html>
