--- a/exercicios.html
+++ b/exercicios.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style_exercicios.css">
 </head>
 <body>
-
-
     <div id="content"> 
         <div class="col-itens"> 
             <div class="row-itens barra" > 
@@ -20,7 +18,7 @@
             </div>
             <div id="container">
                 <h2 id="pergunta"> 1- Suponha o seguinte cenário, dois animais homozigotos tem 2 filhos, qual a probabilidade dos dois filhos serem homozigotos? </h2>
-                <div class="row-itens blocoAlt" id="blocoAlt"> 
+                <div class="row-itens blocoAlt"> 
                     <div class="row-itens"> 
                         <div id="alternativa_a" class="bolinha_alternativa"> a) </div>
                         <div> 
