--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
-    </header>
+    <header> <img src="assets/logo.svg"> </header> 
     <div id="row-itens">
         <div id="col-itens"> 
             <div id="simulador"> 
