--- a/index.html
+++ b/index.html
@@ -101,21 +101,32 @@
         </div> 
         <div id="explicação"> 
 
-            <h1> EXPLICAÇÃO </h1>
+            <h1 id="title-explicacao"> EXPLICAÇÃO </h1>
 
-            <div class="bloco-explicacao"> 
-                <h2> 1º Passo</h2>
-                <div class="blocos"> 
-                    <div id="passo1"> 
-                        <br>
+            <div id="blocoTotal"> 
+                <div class="bloco-explicacao"> 
+                    <h2 id="nominal"> 1º Passo </h2>
+                    <div class="blocos"> 
+                        <div id="text"> 
+                            <h2 class="text"> O simulador <b>GeneTools</b> foi criado com o propósito de 
+                                facilitar o ensino de genética no ensino básico, sendo 
+                                uma ferramenta para os docentes. 
+                            </h2>
+                            <h2 class="text"> Para isso, são utilizados recursos visuais e explicações
+                                por passos e blocos
+                            </h2>
+                            <h2 class="text"> Clique em <b> combinar</b> e descubra mais</h2>
+                        </div>
+
+                        <div id="passo1"> 
+                            <br>
+                        </div>
                     </div>
                 </div>
+                <div id="div_btns"> 
+                    <button id="btn-prox" class="btns-explicacao"> Próximo passo </button>
+                </div>
             </div>
-
-            <div id="div_btns"> 
-                <button id="btn-prox" class="btns-explicacao"> Próximo passo </button>
-            </div>
-
         </div>
         
     </div>
